--- a/Python_with_ChatGPT_INSTRUCTOR.ipynb
+++ b/Python_with_ChatGPT_INSTRUCTOR.ipynb
@@ -50,12 +50,11 @@
     "\n",
     "Kristen Scotti\\\n",
     "Open Science Postdoc\\\n",
-    "Office: 4416, Sorrells Library  \\\n",
-    "[kscotti@andrew.cmu.edu](mailto:kscotti@andrew.cmu.edu) \n",
+    "Email \n",
     "\n",
     "Lencia Beltran\\\n",
     "Open Science Program Coordinator\\\n",
-    "[lbeltran@andrew.cmu.edu](mailto:venkatas@andrew.cmu.edu)\n",
+    "Email\n",
     "\n",
     "\n",
     "## <a id = \"objectives\"></a>Learning Objectives\n",
